# dbt-core-dw-commodities

./: pyproject.toml
dbtcorecommodities/: dbt_project.yml
dbtcorecommodities/models/mart/: mart_commodities.sql  schema.yml
dbtcorecommodities/models/staging/: schema.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
