[project]
name = "dbt-core-dw-commodities"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Pinheiro",email = "alexandre.ypinheiro@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "dbt-postgres (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
